# BRON

./: .pylintrc  Dockerfile  LICENSE  README.md  bootstrap.sh  docker-compose.yml  requirements.txt  setup.cfg
BRON/: build_BRON.py  poc_arango.py
BRON_db/: build_BRON_db.py
bron_corpus/: cybersecurity_corpus.py
download_threat_information/: download_threat_data.py  extracted_fields.json
example_data/: README.md  capec_cwe_mapping.json  capec_names.json  search_result_cve_2019.csv  search_result_ibm.csv  starting_point_ibm_business_process_manager.csv  technique_name_map.json  technique_tactic_map.json
graph_db/: README.md  arango_update_collections.py  bootstrap.sh  bron_arango.py  bron_example_for_detecting_abuse_of_authentication_mechanism_report.py  build.py  poc_arango.py  query_graph_db.py  same_datasource_links.py  schema.json  using_bron_graphdb.ipynb
meta_analysis/: draw_BRON.py  find_riskiest_software.py  make_data_summary.py  sum_unique_cves.py
mitigations/: capec_mitigations.py  cve_mitigations.py  cwe_mitigations.py  d3fend_mitigations.py  ecar_analytics.py  engage_mitigations.py  query_d3fend.py  query_engage.py  technique_mitigations.py  using_d3fend_bron.ipynb  using_engage_bron.ipynb  visualize_d3fend.py
mitre_nist_data/: download_threat_data.py  readme.md
network_configurations/: README.md
offense/: build_atlas.py  build_campaigns.py  build_offensive_BRON.py  build_software_and_groups.py
path_search/: path_search_BRON.py  path_search_BRON_db.py
tests/: compare_cve_count.py  cvss_score_stats_test.py  test_bron_graph_db.py  (+4 more)
(+133 files in other folders)
