[metadata]
name = bronalfa
version = 2.1.1
author = ALFA Group
author_email = hembergerik@csail.mit.edu
description = Linking Threat Tactics, Techniques, and Patterns with Defensive Weaknesses, Vulnerabilities and Affected Platform Configurations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ALFA-group/BRON
project_urls = 
	Bug Tracker = https://github.com/ALFA-group/BRON/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .

[egg_info]
tag_build = 
tag_date = 0

[flake8]
exclude = .git,*migrations*
max-line-length = 120